workspace-sf/force-app/main/default/objects/GarantiaGrupoContrato__c/GarantiaGrupoContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias do grupo do contrato</description>
    <label>Garantia do grupo do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do grupo do contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>