workspace-sf/force-app/main/default/objects/GarantiaGrupoContrato__c/fields/DataSolicitacaoCapitalizacao__c.field-meta.xml
<CustomField>
    <fullName>DataSolicitacaoCapitalizacao__c</fullName>
    <label>Data solicitação capitalização</label>
    <type>Date</type>
</CustomField>