workspace-sf/force-app/main/default/objects/GarantiaGrupoContrato__c/fields/DemonstracaoPremio__c.field-meta.xml
<CustomField>
    <fullName>DemonstracaoPremio__c</fullName>
    <formula>TEXT( GarantiaProduto__r.DemonstracaoPremio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demonstração de prêmio</label>
    <type>Text</type>
</CustomField>