workspace-sf/force-app/main/default/objects/GarantiaGrupoContrato__c/fields/GrupoContrato__c.field-meta.xml
<CustomField>
    <fullName>GrupoContrato__c</fullName>
    <label>Grupo do contrato</label>
    <referenceTo>GrupoContrato__c</referenceTo>
    <relationshipLabel>Garantias do grupo do contrato</relationshipLabel>
    <relationshipName>GarantiasGrupoContrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>