workspace-sf/force-app/main/default/objects/GarantiaGrupoContrato__c/fields/TipoGarantia__c.field-meta.xml
<CustomField>
    <fullName>TipoGarantia__c</fullName>
    <formula>TEXT(GarantiaProduto__r.TipoGarantia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de garantia</label>
    <type>Text</type>
</CustomField>